--- a/Audiovisuals/video.html
+++ b/Audiovisuals/video.html
@@ -94,6 +94,16 @@
       <div class="credits">Music: Commercial Uplifting Corporate - Ivymusic - Pixabay</div>
       <div class="credits">Achtergrond: Tommyvideo - Pixabay</div>
     </div>
+
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/EflUVSMzvYM?si=g52_ACm0IzeiKFzf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>Product Commercial</p>
+      <div class="omschrijving">Deze video toont een product commercial van het Nikon AF-S 50mm F/1.8G objectief.</div>
+      <div class="credits">Music: Headphones - Youtube Audio Library</div>
+    </div>
+
     <div class="col-12 col-md-6 portfoliodiv">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://www.youtube.com/embed/lg46XBk1f-Q?si=2sTzi-5N3ZzA3J-K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -105,15 +115,54 @@
       <div class="credits">Photo Design: Cédric Van Damme.</div>
       <div class="credits">Music: Happy Acoustic Guitar Background Music - Music Unlimited</div>
     </div>
-  <div class="col-12 col-md-6 portfoliodiv">
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/7oRlhWWzKfA?si=dTyJWS3oIU8ZX3wQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/mWmmv70Mfec?si=W0QyEVhePDpKuJ5w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>Corporate</p>
+      <div class="omschrijving">Deze video toont het bedrijfsleven bij drukkerij Envelbag.</div>
+      <div class="credits">Voice Over: Ikram Zaimi</div>
+      <div class="credits">Audio-Opname: Aster Vermeir</div>
     </div>
-  <p>Reportage</p>
-  <div class="omschrijving">Deze video toont een reportage over freestyle voetballer <a href="https://www.instagram.com/martijn_debbaut/" target="_blank">Martijn Debbaut</a>.</div>
-  <div class="credits">Music: Marway - 008 FREESTYLE (Volume 3) - Pixabay</div>
-  <div class="credits">Sea sounds, children & ball on grass - Zapsplat</div>
-</div>
+
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/LXoQUL2dOlc?si=COpdE3g5Jkoh-x-X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>Corporate Event Recap</p>
+      <div class="omschrijving">Deze video is een recap van het teambuilding event voor Meet Het.</div>
+      <div class="credits">Graphics: Benito Dewaegemaeker</div>
+    </div>
+
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/E_CH5GEdp0s?si=oHcYAw0Pb1WcCgY4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>Message</p>
+      <div class="omschrijving">This video brings a social message.</div>
+      <div class="credits">Sound Effect Collision: Zapsplat</div>
+    </div>
+
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/7oRlhWWzKfA?si=dTyJWS3oIU8ZX3wQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    <p>Reportage</p>
+    <div class="omschrijving">Deze video toont een reportage over freestyle voetballer <a href="https://www.instagram.com/martijn_debbaut/" target="_blank">Martijn Debbaut</a>.</div>
+    <div class="credits">Music: Marway - 008 FREESTYLE (Volume 3) - Pixabay</div>
+    <div class="credits">Sea sounds, children & ball on grass - Zapsplat</div>
+    </div>
+
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/2X79AmltkeQ?si=yHwPLq9_wk-SvZfV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>Portrait</p>
+      <div class="omschrijving">Deze video toont een portret van mijn grootvader.</div>
+      <div class="credits">Music: Lesfm - Forest Lullaby - Pixabay</div>
+    </div>
+
 </div>
 </main>
 <script src="../JS/app.js"></script>
