--- a/English/Audiovisuals/video.html
+++ b/English/Audiovisuals/video.html
@@ -96,6 +96,15 @@
 
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/EflUVSMzvYM?si=g52_ACm0IzeiKFzf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Product Commercial</p>
+        <div class="omschrijving">This video shows a portrait of the Nikon AF-S 50mm F/1.8G objective.</div>
+        <div class="credits">Music: Headphones - Youtube Audio Library</div>
+      </div>
+
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
           <iframe src="https://www.youtube.com/embed/lg46XBk1f-Q?si=4WxcTGFCHfXDDCQT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Month Of The Market</p>
@@ -108,6 +117,35 @@
 
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/mWmmv70Mfec?si=W0QyEVhePDpKuJ5w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Corporate</p>
+        <div class="omschrijving">This video is a corporate of the printing company Envelbag.</div>
+        <div class="credits">Voice Over: Ikram Zaimi</div>
+        <div class="credits">Audio Recording: Aster Vermeir</div>
+      </div>
+
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/LXoQUL2dOlc?si=COpdE3g5Jkoh-x-X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Corporate Event Recap</p>
+        <div class="omschrijving">This video is a recap of a teambuilding event for Meet Het.</div>
+        <div class="credits">Graphics: Benito Dewaegemaeker</div>
+      </div>
+
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/E_CH5GEdp0s?si=oHcYAw0Pb1WcCgY4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Message</p>
+        <div class="omschrijving">This video brings a social message.</div>
+        <div class="credits">Sound Effect Collision: Zapsplat</div>
+      </div>
+
+
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
           <iframe src="https://www.youtube.com/embed/830MdqBGJYs?si=dNrwOt8JZp7jZ-r5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Reportage</p>
@@ -116,6 +154,16 @@
         <div class="credits">Music: Marway - 008 FREESTYLE (Volume 3) - Pixabay</div>
         <div class="credits">Sea sounds, children & ball on grass - Zapsplat</div>
       </div>
+
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/2X79AmltkeQ?si=yHwPLq9_wk-SvZfV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Portrait</p>
+        <div class="omschrijving">This video shows a portrait of my grandfather.</div>
+        <div class="credits">Music: Lesfm - Forest Lullaby - Pixabay</div>
+      </div>
+
     </div>
   </main>
   <script src="../../JS/appEnglish.js"></script>
