--- a/contact-freestyle.html
+++ b/contact-freestyle.html
@@ -32,47 +32,12 @@
           class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Audiovisuals
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="Audiovisuals/index.html">Hoofdpagina</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="Audiovisuals/video.html">Video</a>
-              <a class="dropdown-item" href="Audiovisuals/2D.html">2D-animatie</a>
-          <a class="dropdown-item" href="Audiovisuals/3D.html">3D-animatie</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Fotografie </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
-                href="Fotografie/index.html">Hoofdpagina</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="Fotografie/portret.html">Portret</a> 
-              <a class="dropdown-item" href="Fotografie/sfeer.html">Sfeer</a>
-              <a class="dropdown-item" href="Fotografie/natuur.html">Natuur</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Graphic Designs </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
-                href="Design/index.html">Hoofdpagina</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="Design/surrealisme.html">Surrealisme</a> <a class="dropdown-item"
-                href="Design/posters.html">Posters</a> <a class="dropdown-item" href="Design/logos.html">Logo's</a> <a
-                class="dropdown-item" href="Design/infographics.html">Infographics</a> <a class="dropdown-item"
-                href="Design/campagnes.html">Campagnes</a>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="overmij.html">Over Mij</a> </li>
-          <!-- <li class="nav-item"><a class="nav-link" href="bonny.html">Bonny</a></li> -->
-          <li class="nav-item active"> <a class="nav-link activepart" href="contact.html">Contact<span
+          <li class="nav-item"> <a class="nav-link" href="freestyle.html">Home of Freestyle</a> </li>
+          <li class="nav-item active"> <a class="nav-link activepart" href="contact-freestyle.html">Contact<span
                 class="sr-only">(current)</span></a> </li>
         </ul>
       </div>
-      <a class="language" href="./English/contact.html"><div class="language">English</div></a>
+      <a class="language" href="./English/contact-freestyle.html"><div class="language">English</div></a>
     </nav>
   </header>
   <main class="main">
@@ -124,8 +89,8 @@
       <div class="col-12 col-sm-6 col-lg-2">
         <h5 class="topmarge animated fadeInLeft">Sociale Media</h5>
         <ul class="list-unstyled animated fadeInUp">
-          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_design/" class="fa fa-instagram" target="_blank"><span>timbonnarens_design</span></a>
-          <li class="contactlink"><a href="https://www.youtube.com/@timbonnarens/videos" class="fa fa-youtube" target="_blank"><span>Tim Bonnarens</span></a></li>
+          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_freestyle/" class="fa fa-instagram" target="_blank"><span>timbonnarens_freestyle</span></a>
+          <li class="contactlink"><a href="https://www.youtube.com/channel/UCSCQnlefxNHWhy9ShLzt7Ow" class="fa fa-youtube" target="_blank"><span>Tim Bonnarens Freestyle</span></a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-2">
