--- a/English/contact-freestyle.html
+++ b/English/contact-freestyle.html
@@ -27,55 +27,17 @@
   <header>
     <nav class="navbar navbar-expand-lg"> <a class="navbar-brand"><img src="../Fotos/Logo_TimBonnarens.png"
           class="logo_tim" alt="LogoTim"></a>
-      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
+          class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="../English/index.html">Home</a> </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Audiovisuals
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="../English/Audiovisuals/index.html">Main Page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../English/Audiovisuals/video.html">Video</a>
-              <a class="dropdown-item" href="../English/Audiovisuals/2D.html">2D-animation</a>
-              <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
-                href="../English/Photography/index.html">Main Page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../English/Photography/portrait.html">Portrait</a>
-              <a class="dropdown-item" href="../English/Photography/atmospheric.html">Atmospheric</a>
-              <a class="dropdown-item" href="../English/Photography/nature.html">Nature</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Graphic Designs </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
-                href="../English/Design/index.html">Main page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../English/Design/surrealism.html">Surrealism</a> <a class="dropdown-item"
-                href="../EnglishDesign/posters.html">Posters</a> <a class="dropdown-item"
-                href="../English/Design/logos.html">Logos</a> <a class="dropdown-item"
-                href="../English/Design/infographics.html">Infographics</a> <a class="dropdown-item"
-                href="../English/Design/infographics.html">Campaigns</a>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="../English/aboutme.html">About Me</a> </li>
-          <!-- <li class="nav-item"><a class="nav-link" href="../English/bonny.html">Bonny</a> </li> -->
-          <li class="nav-item active"> <a class="nav-link activepart" href="../English/contact.html">Contact<span class="sr-only">(current)</span></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="freestyle.html">Home of Freestyle</a> </li>
+          <li class="nav-item active"> <a class="nav-link activepart" href="contact-freestyle.html">Contact<span
+                class="sr-only">(current)</span></a> </li>
         </ul>
       </div>
-      <a class="language" href="../contact.html">
-        <div class="language">Dutch</div>
-      </a>
+      <a class="language" href="../contact-freestyle.html"><div class="language">Dutch</div></a>
     </nav>
   </header>
   <main class="main">
@@ -112,7 +74,7 @@
         </form> 
       </div> -->
       <div class="col-12 col-sm-6 col-lg-2">
-        <h5 class="topmarge animated fadeInLeft">Phone Number/Mail</h5>
+        <h5 class="topmarge animated fadeInLeft">Tel/Mail</h5>
         <ul class="list-unstyled animated fadeInUp">
           <li class="contactlink"><i class="fas fa-phone fa"></i> +32 476 61 49 39 </li>
           <li class="contactlink"><i class="fas fa-envelope fa"></i> tim.bonnarens@gmail.com </li>
@@ -121,26 +83,25 @@
       <div class="col-12 col-sm-6 col-lg-2">
         <h5 class="topmarge animated fadeInLeft">Adress</h5>
         <ul class="list-unstyled animated fadeInUp">
-          <li class="contactlink"><i class="fas fa-home"></i> Stijn Streuvelsstraat 10,<div class="CityAndCountry"> 9160
-              Lokeren, Belgium</div></i></li>
+          <li class="contactlink"><i class="fas fa-home"></i> Stijn Streuvelsstraat 10,<div class="CityAndCountry"> 9160 Lokeren, Belgium</div></i></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-2">
         <h5 class="topmarge animated fadeInLeft">Social Media</h5>
         <ul class="list-unstyled animated fadeInUp">
-          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_design/" class="fa fa-instagram" target="_blank"><span>timbonnarens_design</span></a>
-          <li class="contactlink"><a href="https://www.youtube.com/@timbonnarens/videos" class="fa fa-youtube" target="_blank"><span>Tim Bonnarens</span></a></li>
+          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_freestyle/" class="fa fa-instagram" target="_blank"><span>timbonnarens_freestyle</span></a>
+          <li class="contactlink"><a href="https://www.youtube.com/channel/UCSCQnlefxNHWhy9ShLzt7Ow" class="fa fa-youtube" target="_blank"><span>Tim Bonnarens Freestyle</span></a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-2">
-        <h5 class="topmarge animated fadeInLeft">VAT number</h5>
+        <h5 class="topmarge animated fadeInLeft">VAT Number</h5>
         <ul class="list-unstyled animated fadeInUp">
           <li class="contactlink"><i class="fa fa-briefcase"></i> BE0763832042 </li>
         </ul>
       </div>
     </div>
   </main>
-  <script src="../JS/appEnglish.js"></script>
-</body>
 
+  <script src="./JS/app.js"></script>
+</body>
 </html>
