--- a/freestyle.html
+++ b/freestyle.html
@@ -100,7 +100,7 @@
         <p class="omschrijving">- Winnaar Belgium Online Lower Competition 2020</p>
         <p class="omschrijving">- Daarnaast ook top 16, top 8 en top 6 in verschillende Belgische competities</p>
         <h4 class="freestyletitle">Mogelijkheden</h4>
-        <p class="omschrijving">Naast Designen kan ik dus ook goed overweg met de bal, en sta ik ook actief als freelance freestyle voetballer. Naast design bedrijf, staat Tim Bonnarens eveneens geregistreerd onder "Beoefening van uitvoerende kunsten door zelfstandig werkende artiesten".</p>
+        <p class="omschrijving">Ik kan dus goed overweg met de bal, en sta ik actief als freelance freestyle voetballer. Tim Bonnarens staat geregistreerd onder "Beoefening van uitvoerende kunsten door zelfstandig werkende artiesten".</p>
          <!--
          <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
            alt="Responsive image"></div>
