--- a/English/freestyle.html
+++ b/English/freestyle.html
@@ -95,7 +95,7 @@
         <p class="omschrijving">- Winner Belgium Online Lower Competition 2020</p>
         <p class="omschrijving">- Also top 16, top 8 and top 6 in various belgian Competitions</p>
         <h4 class="freestyletitle">Possibilities</h4>
-        <p class="omschrijving">I can handle the ball well, and I'm active as a freelance freestyle footballer. Tim Bonnarens is registrated under "Practice of performing arts by independently working artists".</p>
+        <p class="omschrijving">I can handle the ball well, and I'm active as a freelance freestyle footballer.</p>
          <!--
          <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
            alt="Responsive image"></div>
