--- a/freestyle.html
+++ b/freestyle.html
@@ -93,7 +93,7 @@
         <h4 class="freestyletitle">Info over freestyle</h4>
               <p class="omschrijving">Ik was van kinds af aan al gepassioneerd door jongleren en skills met de bal. In 2016 ben ik begonnen
                 met enkele simpele, indrukwekkende trucs te leren. Sindsdien ben ik continu bezig met mijn freestyle
-                naar een hoger niveau te brengen en doe ik geregeld mee aan competities. Nu ben ik beschikbaar voor
+                naar een hoger niveau te brengen en doe ik geregeld mee aan competities. Nu ben ik beschikbaar voor workshops, 
                 privétrainingen, optredens, rollen in muziekclips, reclameclips, sponsoring, ... </p>
         <h4 class="freestyletitle">Rewards</h4>
         <p class="omschrijving">- Winnaar Play like Pélé Belgium by Snickers, Meet and Greet met beste voetballer aller tijden</p>
