--- a/English/freestyle.html
+++ b/English/freestyle.html
@@ -89,7 +89,7 @@
       </div>
       <div class="col-12 col-md-6 portfoliodiv">
         <h4 class="freestyletitle">Info about freestyle</h4>
-              <p class="omschrijving">I was passionated for juggling and skills with a ball since I was a child. In 2016, I started learning some simple, impressive tricks. Since then I have been continuously bringing my freestyle to a higher level and I regularly participate in competitions. Now I'm available for private training, performances, roles in music clips, advertising clips, sponsorships, ...</p>
+              <p class="omschrijving">I was passionated for juggling and skills with a ball since I was a child. In 2016, I started learning some simple, impressive tricks. Since then I have been continuously bringing my freestyle to a higher level and I regularly participate in competitions. Now I'm available for workshops, private trainings, performances, roles in music clips, advertising clips, sponsorships, ...</p>
         <h4 class="freestyletitle">Rewards</h4>
         <p class="omschrijving">- Winner Play like Pélé Belgium by Snickers, Meet and Greet with best soccer player of all time.</p>
         <p class="omschrijving">- Winner Belgium Online Lower Competition 2020</p>
