--- a/Audiovisuals/video.html
+++ b/Audiovisuals/video.html
@@ -163,6 +163,17 @@
       <div class="credits">Music: Lesfm - Forest Lullaby - Pixabay</div>
     </div>
 
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/rNiMDKuALyo?si=6RGYkIYeeV45Dw24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <p>Sport Event Recap</p>
+      <div class="omschrijving">Dit is een recap van het open wereldkampioenschap freestyle voetbal 2023.</div>
+      <div class="credits">Song 1: Slipping Away - Dyalla - YouTube Audio Library</div>
+      <div class="credits">Song 2: Here It Comes - TrackTribe - YouTube Audio Library</div>
+      <div class="credits">Song 3: Stardrive - Jeremy Blake - YouTube Audio Library</div>
+    </div>
+
 </div>
 </main>
 <script src="../JS/app.js"></script>
