--- a/English/Audiovisuals/video.html
+++ b/English/Audiovisuals/video.html
@@ -169,7 +169,7 @@
           <iframe src="https://www.youtube.com/embed/rNiMDKuALyo?si=6RGYkIYeeV45Dw24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Sport Event Recap</p>
-        <div class="omschrijving">This Is A Recap Of The Open World Championships 2023 in Freestyle Football.</div>
+        <div class="omschrijving">This is a recap of the Open World Championships 2023 in freestyle football.</div>
         <div class="credits">Song 1: Slipping Away - Dyalla - YouTube Audio Library</div>
         <div class="credits">Song 2: Here It Comes - TrackTribe - YouTube Audio Library</div>
         <div class="credits">Song 3: Stardrive - Jeremy Blake - YouTube Audio Library</div>
