--- a/Audiovisuals/2D.html
+++ b/Audiovisuals/2D.html
@@ -55,6 +55,20 @@
 		  <a class="dropdown-item" href="../Fotografie/natuur.html">Natuur</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Graphic Designs
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="../Design/index.html">Hoofdpagina</a>
+		  <div class="dropdown-divider"></div>
+		  <a class="dropdown-item" href="../Design/surrealisme.html">Surrealisme</a>
+          <a class="dropdown-item" href="../Design/posters.html">Posters</a>
+		  <a class="dropdown-item" href="../Design/logos.html">Logo's</a>
+		  <a class="dropdown-item" href="../Design/infographics.html">Infographics</a>
+		  <a class="dropdown-item" href="../Design/campagnes.html">Campagnes</a>
+        </div>
+      </li>
 	  <li class="nav-item">
         <a class="nav-link" href="../overmij.html">Over Mij</a>
       </li>
@@ -91,5 +105,4 @@
   </main>
   <script src="../JS/app.js"></script>
 </body>
-
 </html>
