--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
     <div class="row portfolio">
       <div class="col-12 col-md-6">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe src="https://www.youtube.com/embed/ZlqjnuHTeo8?si=4bjyPP5pUQgFx0CO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/dKlzuyWf5hs?si=Fm113xY1zgbbLJJr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Video Showreel</p>
         <!-- <div class="omschrijving">Als allround video designer verzorgt Tim Bonnarens video, audio en animatie.</div> -->
-        <div class="credits">Song 1: Audio Library Plus - IVAAVI - Too Sweet</div>
-        <div class="credits">Song 2: Pixabay - Zakhar Valaha - Cinematic Melody</div>
-        <div class="credits">Sound Effects: freesound.org, zapsplat en zelf opgenomen</div>
+        <div class="credits">Song: YouTube Audio Library - Nico Staf - Sunny Travel</div>
+        <div class="credits">Rol: Camera Operator en Editor voor elk shot</div>
       </div>
       <div class="col-12 col-md-6">
           <div class="embed-responsive embed-responsive-16by9">
