--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <footer>
     <div class="row">
       <div class="col-12 col-sm-4 footertext">Op deze site vindt u onder andere mijn portfolio terug!</div>
-      <div class="col-12 col-sm-4 footertext">Beschikbaar voor opdrachten als freelancer!</div>
+      <div class="col-12 col-sm-4 footertext">Beschikbaar voor opdrachten als freelancer t.e.m. december 2023.</div>
       <div class="col-12 col-sm-4 footertext">Deze website is gemaakt door Tim Bonnarens.</div>
     </div>
   </footer>
