--- a/English/index.html
+++ b/English/index.html
@@ -175,7 +175,7 @@
   <footer>
     <div class="row">
       <div class="col-12 col-sm-4 footertext">On this site, you can find my portfolio!</div>
-      <div class="col-12 col-sm-4 footertext">Available voor assignments as a freelancer!</div>
+      <div class="col-12 col-sm-4 footertext">Available voor assignments as a freelancer until December 2023.</div>
       <div class="col-12 col-sm-4 footertext">This website is made by Tim Bonnarens.</div>
     </div>
   </footer>
