--- a/Audiovisuals/2D.html
+++ b/Audiovisuals/2D.html
@@ -87,11 +87,33 @@
     <div class="row portfolio">
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/noxHjCrm9Cs?si=tG-zYCGyeceg6u6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Intro AVD TV</p>
+        <div class="omschrijving">Dit is een intro die ik gemaakt heb voor het YT Kanaal "AVD TV".</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/VN4qF05ayL8?si=gxdLNOjTvnZV5dkP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Outro AVD TV</p>
+        <div class="omschrijving">Dit is een outro die ik gemaakt heb voor het YT Kanaal "AVD TV".</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
           <iframe src="https://www.youtube.com/embed/CPYEg2yilOI?si=JAOnR-dgkPNTeH-l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Cupido</p>
         <div class="omschrijving">In deze video heb ik een verhaal uitgewerkt rond cupido in After Effects.</div>
         <div class="credits">Muziek: Pixabay - Zakhar Valaha - Cinematic Melody</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/qHEzn7ASGRk?si=uEAHK-jywPdCML12" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Intro Bonny</p>
+        <div class="omschrijving">Dit is de Intro voor een YouTube kanaal van een luchtig videografiekanaal Bonny &lpar; Later omgedoopt tot het serieuzere <a href="https://www.youtube.com/@timbonnarens/" target="_blank">Tim Bonnarens</a>&rpar;</div>
+        <div class="credits">Muziek: 24 Happy Hours a Day - Igor Khainskyi - Audio Library Release</div>
       </div>
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
