--- a/English/Audiovisuals/2D.html
+++ b/English/Audiovisuals/2D.html
@@ -86,11 +86,33 @@
     <div class="row portfolio">
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/noxHjCrm9Cs?si=tG-zYCGyeceg6u6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Intro AVD TV</p>
+        <div class="omschrijving">This is an intro that I've made for a YT channel named "AVD TV".</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/VN4qF05ayL8?si=gxdLNOjTvnZV5dkP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Outro AVD TV</p>
+        <div class="omschrijving">This is an outro that I've made for a YT channel named "AVD TV".</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
           <iframe src="https://www.youtube.com/embed/CPYEg2yilOI?si=JAOnR-dgkPNTeH-l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Cupido</p>
         <div class="omschrijving">In this video I made a story about Cupido and produced it in After Effects.</div>
         <div class="credits">Music: Pixabay - Zakhar Valaha - Cinematic Melody</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/qHEzn7ASGRk?si=uEAHK-jywPdCML12" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Intro Bonny</p>
+        <div class="omschrijving">This is the intro for the entertaining videography channel Bonny &lpar;Later renamed to the more serious <a href="https://www.youtube.com/@timbonnarens/" target="_blank">Tim Bonnarens</a>&rpar;</div>
+        <div class="credits">Music: 24 Happy Hours a Day - Igor Khainskyi - Audio Library Release</div>
       </div>
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
