--- a/English/Audiovisuals/3D.html
+++ b/English/Audiovisuals/3D.html
@@ -73,6 +73,24 @@
     <div class="row portfolio">
       <div class="col-12 col-md-6 portfoliodiv">
         <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/BjAMH50tjgw?si=Wzp58W7LqSbPyBwr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Underground Alien</p>
+        <div class="omschrijving">In this video I made a story about a monster..</div>
+        <div class="credits">Music: Pixabay - JuliusH - Dark and Scary Wind - JuliusH</div>
+        <div class="credits">Sounds: Zapsplat</div>
+        </div>
+        <div class="col-12 col-md-6 portfoliodiv">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/LUz5kYQRQMM?si=4xb6kKTnZArNLfDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <p>A Newborn's Influence</p>
+          <div class="omschrijving">In this video I made a chain reaction.</div>
+          <div class="credits">Music: Zapsplat - Good Times (funky chilled edit)</div>
+          <div class="credits">Sounds: Zapsplat & freesound</div>
+          </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
           <iframe src="https://www.youtube.com/embed/FKTVU4uqzyQ?si=tI0j0X2ZzQeb7NFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p>Car-chase</p>
